--- a/week-7-day-1/qa-app/package.json
+++ b/week-7-day-1/qa-app/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-quill": "^0.2.1",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
